--- a/eco-sounds/src/scss/style.scss
+++ b/eco-sounds/src/scss/style.scss
@@ -15,6 +15,114 @@
     padding: 0px 15px;
     box-sizing: content-box;
 } 
+
+
+
+.header {
+    background-color: black;
+    max-height: 100px;
+    padding: 8px 0px;
+	&__container { 
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+	&__logo { 
+        transition: .5s;
+        cursor: pointer;
+        img {
+            max-width: 100%;
+        }
+        &:hover {
+            filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+            transition: .5s;
+        }
+    }
+}
+
+.navigation {
+	&__list { 
+        display: flex;
+    }
+	&__item { 
+        color: white;
+        transition: .5s;
+
+        &:not(:last-child) {
+            margin-right: 40px;
+        }
+        &:hover {
+            color: #bdae82;
+            cursor: pointer;
+            transition: .5s;
+        }
+    }
+}
+
 .main {
     flex: 1 1 auto;
+    background: url(/img/forest.jpg) center/cover no-repeat;
+    position: relative;
+
+    &__button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 150px;
+        height: 150px;
+        background: url(/svg/play.svg) center/cover no-repeat;
+        transition: .5s;
+
+        &:hover {
+            filter: brightness(1.5);
+            transition: .5s;
+            cursor: pointer;
+        }
+    }
+}
+
+.footer {
+    background-color: black;
+    padding: 8px 0px;
+	&__container { 
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+.copyright {
+	&__list { 
+        display: flex;
+        justify-content: space-between;
+    }
+	&__item,
+    &__link { 
+        color: white;
+        transition: .5s;
+    }
+    &__item {
+        &:not(:last-child) {
+            margin-right: 15px;
+        }
+    }
+    &__link:hover {
+        color: #bdae82;
+        transition: .5s;
+    }
+}
+.rsschool { 
+        width: 135px;
+        height: 50px;
+        
+    &__logo {
+        transition: .5s;
+        img {
+            max-width: 100%;
+        }
+        &:hover {
+            filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+            transition: .5s;
+        }
+    }
 }
